force-app/main/default/objects/Opportunity/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Discount of the whole sale. The integration with Sales App will use the to discount from The Amount field.</description>
    <inlineHelpText>Sales should put the manual discount of the total invoice here.</inlineHelpText>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>