force-app/main/default/objects/Opportunity/fields/Rebase6__c.field-meta.xml
<CustomField>
    <fullName>Rebase6__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Description mod in Dev1</description>
    <inlineHelpText>Help Text</inlineHelpText>
    <label>Rebase6</label>
    <type>Checkbox</type>
</CustomField>