force-app/main/default/objects/Opportunity/fields/RT_test_1__c.field-meta.xml
<CustomField>
    <fullName>RT_test_1__c</fullName>
    <label>RT test 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test1</fullName>
            </value>
            <value>
                <fullName>Test2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>