force-app/main/default/objects/Opportunity/fields/User_2__c.field-meta.xml
<CustomField>
    <fullName>User_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>