force-app/main/default/objects/Opportunity/fields/User_3__c.field-meta.xml
<CustomField>
    <fullName>User_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>