force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>xyz_SGUID_Opp__c</columns>
    <columns>TrackingNumber__c</columns>
    <columns>OrderNumber__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Opportunities</label>
    <language>en_US</language>
</ListView>